// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post component renders a .Post by default 1`] = `
<Fragment>
  <div
    className="Post"
  >
    <div
      className="Post__info"
    >
      <h2
        className="Post__title"
      >
        <Link
          replace={false}
          to="/post/undefined"
        />
      </h2>
      <div
        className="Post__dates-modified"
      >
        <span
          className="Date"
        >
          NaN/NaN/NaN
        </span>
      </div>
      <div
        className="Post__visibility_div"
      >
        <p
          className="Post__visibility"
        />
      </div>
    </div>
    <div
      className="Post__buttons_container"
    >
      <button
        className="Post__edit_button"
        type="button"
      >
        <Link
          replace={false}
          to="/edit/undefined"
        >
          <FontAwesomeIcon
            border={false}
            className="Folder__delete"
            fixedWidth={false}
            flip={null}
            icon="edit"
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            symbol={false}
            title=""
            transform={null}
          />
        </Link>
      </button>
      <button
        className="Post__delete_button"
        onClick={[Function]}
        type="button"
      >
        <FontAwesomeIcon
          border={false}
          className="Folder__delete"
          fixedWidth={false}
          flip={null}
          icon="trash-alt"
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          title=""
          transform={null}
        />
      </button>
    </div>
  </div>
</Fragment>
`;

exports[`Post component renders the Post given props 1`] = `
<Fragment>
  <div
    className="Post"
  >
    <div
      className="Post__info"
    >
      <h2
        className="Post__title"
      >
        <Link
          replace={false}
          to="/post/a"
        >
          test-class-name
        </Link>
      </h2>
      <div
        className="Post__dates-modified"
      >
        <span
          className="Date"
        >
          0/15/2019
        </span>
      </div>
      <div
        className="Post__visibility_div"
      >
        <p
          className="Post__visibility"
        />
      </div>
    </div>
    <div
      className="Post__buttons_container"
    >
      <button
        className="Post__edit_button"
        type="button"
      >
        <Link
          replace={false}
          to="/edit/a"
        >
          <FontAwesomeIcon
            border={false}
            className="Folder__delete"
            fixedWidth={false}
            flip={null}
            icon="edit"
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            symbol={false}
            title=""
            transform={null}
          />
        </Link>
      </button>
      <button
        className="Post__delete_button"
        onClick={[Function]}
        type="button"
      >
        <FontAwesomeIcon
          border={false}
          className="Folder__delete"
          fixedWidth={false}
          flip={null}
          icon="trash-alt"
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          title=""
          transform={null}
        />
      </button>
    </div>
  </div>
</Fragment>
`;
